--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Links</title>
+
+		<link
+			rel="shortcut icon"
+			href="./Images/favicon.png"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<h1>
